--- a/src/features/Orders/order.css
+++ b/src/features/Orders/order.css
@@ -33,6 +33,7 @@
   box-shadow: 0px 0px 23px 0px rgb(0 0 0 / 5%);
   padding: 8px;
   border-radius: 12px;
+  box-shadow: 0 6px 15px #dcd8ee;
 }
 
 .order-item__img {
@@ -192,6 +193,7 @@
   .order-item {
     position: relative;
     padding: 12px 4px;
+    box-shadow: 0 4px 20px rgb(113 97 186 / 20%);
   }
 
   .order-item__img {
@@ -227,5 +229,9 @@
   .order-item__cnt-bot .order-item__count {
     font-size: 16px;
     line-height: 20px;
+  }
+
+  .order-item__cnt-bot .order-item__status button {
+    border-radius: 4px;
   }
 }
