--- a/src/features/FilterOrgs/filter-orgs.css
+++ b/src/features/FilterOrgs/filter-orgs.css
@@ -113,6 +113,7 @@
         background-color: transparent;
     }
     .se-re-cnt__left-sort{
+        width: 85vw;
         height: 100%;
         background-color: var(--bgWhite);
         margin: 0px;
