--- a/src/featuresMobile/Account/account.css
+++ b/src/featuresMobile/Account/account.css
@@ -5,7 +5,7 @@
 @media only screen and (max-width: 767px) {
   .mb-ac {
     display: block;
-    padding: 20px;
+    padding: 12px 8px;
     padding-bottom: 84px;
     background-color: var(--bgWhite);
   }
@@ -75,6 +75,7 @@
     height: 16px;
   }
   .mb-ac__cnt-avt-name {
+    width: 100%;
     margin: 20px 0px 0px 0px;
     font-size: 18px;
     line-height: 24px;
@@ -94,7 +95,7 @@
     width: 100%;
   }
   .mb-ac__cnt-avt-rank ul li {
-    width: fit-content;
+    width: 30%;
     padding: 0px 8px;
   }
   .mb-ac__cnt-avt-rank .item {
