--- a/src/features/HomeResults/home-result.css
+++ b/src/features/HomeResults/home-result.css
@@ -1,97 +1,96 @@
 /* home result tag */
-.home-result-org-cnt{
+.home-result-org-cnt {
     padding: 24px 0px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
-.home-result-org-cnt__left{
+.home-result-org-cnt__left {
     width: 16.6%;
     padding-right: 8px;
     border-right: 1px solid #eeedf2;
 }
-.home-result-org-cnt__right{
+.home-result-org-cnt__right {
     padding-left: 8px;
     width: 83.3%;
 }
 /* home result promo */
-.home-result-ser-cnt{
+.home-result-ser-cnt {
     padding: 24px 0px;
 }
 /* home banner deal */
-.deal-banner{
+.deal-banner {
     padding: 48px 0px;
 }
-.deal-banner__img{
+.deal-banner__img {
     width: 100%;
 }
-.deal-banner__list{
+.deal-banner__list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-.deal-banner__list li{
+.deal-banner__list li {
     width: 16.66%;
     background-color: var(--bgWhite);
     padding: 12px 8px;
 }
-.deal-banner__bot{
+.deal-banner__bot {
     margin-top: 32px;
     display: flex;
     justify-content: center;
 }
-.home-result-org-cnt__mb{
+.home-result-org-cnt__mb {
     display: none;
 }
 /* end home banner deal */
 /* Mobile */
 @media only screen and (max-width: 767px) {
-    .home-result-ser-cnt{
+    .home-result-ser-cnt {
         padding: 12px 0px;
     }
-    .home-promo-ser__mb{
+    .home-promo-ser__mb {
         width: 100%;
+        margin-top: 0;
     }
-    .ser-list__mb{
-        width: 100% !important;
-        flex-wrap: wrap !important;
-    }
-    .ser-list-item__mb{
-        width: 50% !important;
+    .ser-list__mb {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        padding: 0 16px;
     }
     .home-result-org-cnt {
         flex-direction: column;
         padding: 12px 0px;
     }
-    .home-result-org-cnt__left{
+    .home-result-org-cnt__left {
         display: none;
     }
-    .home-result-org-cnt__right{
+    .home-result-org-cnt__right {
         width: 100%;
         padding: 0px 20px;
     }
-    .deal-banner{
+    .deal-banner {
         padding: 0px 0px 32px 0px;
     }
-    .deal-banner__list li{
-        width: 50%;
+    .deal-banner__list li {
         background-color: var(--bgWhite);
         padding: 12px 8px;
     }
-    .home-result-org-cnt__mb{
+    .home-result-org-cnt__mb {
         display: block;
         background-color: var(--bgWhite);
     }
-    .home-result-org-cnt__mb .cnt{
+    .home-result-org-cnt__mb .cnt {
         padding: 0px 12px;
     }
-    .home-result-org-cnt__mb .cnt span{
+    .home-result-org-cnt__mb .cnt span {
         font-size: 12px;
         line-height: 14px;
         font-weight: 700;
     }
-    .home-result-org-cnt__mb .cnt button{
+    .home-result-org-cnt__mb .cnt button {
         border: none;
         outline: none;
         background-color: transparent;
