--- a/src/features/CartPayment/cartPayment.css
+++ b/src/features/CartPayment/cartPayment.css
@@ -339,7 +339,24 @@
   height: 14px;
   margin-right: 4px;
 }
-
+.cnt-fail{
+  background-color: var(--bgWhite);
+  width: 90vw;
+  padding: 24px 0px;
+}
+.cnt-fail span{
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  color: var(--purple);
+}
+.cnt-fail .content{
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: var(--text-black);
+  margin-bottom: 12px;
+}
 
 /* responsive */
 /* Tablet */
@@ -408,7 +425,7 @@
     pointer-events: none;
   }
   .payment-cnt {
-    padding: 24px;
+    padding: 20px;
   }
   .payment-form__box {
     flex-direction: column;
@@ -425,11 +442,11 @@
     width: 100%;
     border-radius: 12px;
     margin-top: 12px;
-    padding: 12px;
+    padding: 6px;
     height: fit-content;
   }
   .cart-list__payment {
-    padding-top: 32px;
+    padding: 12px 0px;
   }
   .pm-form__top-item {
     width: 100%;
@@ -507,5 +524,14 @@
     width: 64px;
     height: 48px;
     flex-shrink: 0;
+  }
+  .payment-total__body-submit span{
+    display: none;
+  }
+  .payment-total__body-submit{
+    justify-content: center;
+  }
+  .payment-total__body-submit button{
+    width: 100%;
   }
 }
