--- a/src/featuresMobile/Account/account.css
+++ b/src/featuresMobile/Account/account.css
@@ -5,7 +5,8 @@
 @media only screen and (max-width: 767px) {
   .mb-ac {
     display: block;
-    padding: 24px;
+    padding: 12px 8px;
+    padding-bottom: 84px;
     background-color: var(--bgWhite);
   }
   .err-text {
@@ -74,6 +75,7 @@
     height: 16px;
   }
   .mb-ac__cnt-avt-name {
+    width: 100%;
     margin: 20px 0px 0px 0px;
     font-size: 18px;
     line-height: 24px;
@@ -93,7 +95,7 @@
     width: 100%;
   }
   .mb-ac__cnt-avt-rank ul li {
-    width: fit-content;
+    width: 30%;
     padding: 0px 8px;
   }
   .mb-ac__cnt-avt-rank .item {
@@ -154,7 +156,7 @@
   /* orders */
   .mb-order {
     width: 100%;
-    min-height: max-content;
+    /* min-height: max-content; */
     height: 100%;
     background-color: var(--bgWhite);
     overflow-y: scroll;
