--- a/src/features/Home/home.css
+++ b/src/features/Home/home.css
@@ -39,6 +39,43 @@ img {
   overflow: hidden;
 }
 
+.home-banner__btn-prev,
+.home-banner__btn-next {
+  position: absolute;
+  opacity: 0;
+  z-index: 10;
+  top: 50%;
+  margin-left: 8px;
+  border-radius: 100%;
+  border: none;
+  outline: none;
+  background-color: #f5f5f780;
+  transition: all .3s;
+  padding: 3px;
+}
+
+.home-banner__btn-next {
+  right: 8px;
+}
+
+.home-banner__btn-prev img,
+.home-banner__btn-next img {
+  width: 32px;
+  height: 32px;
+}
+
+.home-banner:hover .home-banner__btn-prev {
+  display: block;
+  opacity: 1;
+  margin-left: 14px;
+}
+
+.home-banner:hover .home-banner__btn-next {
+  display: block;
+  opacity: 1;
+  right: 14px;
+}
+
 .home-banner__img {
   height: fit-content;
   width: 100%;
@@ -421,12 +458,13 @@ img {
 .ip-search-cnt .ip-search {
   justify-content: space-between;
   border: 1px solid #eeedf2;
-  padding:12px;
+  padding: 12px;
   flex-direction: row;
   border-radius: 24px;
   box-shadow: inset 0 2px 6px rgb(113 97 186 / 20%);
 }
-.ip-search-cnt .ip-search .content{
+
+.ip-search-cnt .ip-search .content {
   font-size: 13px;
   line-height: 16px;
   font-weight: 700;
@@ -2177,7 +2215,10 @@ img {
     flex-direction: column;
     justify-content: stretch;
   }
-
+  .home-banner:hover .home-banner__btn-next,
+  .home-banner:hover .home-banner__btn-prev{
+    display: none;
+  }
   .home-banner__img>img {
     border-radius: unset;
   }
