--- a/src/features/MerchantDetail/merchantDetail.css
+++ b/src/features/MerchantDetail/merchantDetail.css
@@ -757,24 +757,27 @@
 .org-dis-cnt {
     width: 100%;
     margin-top: 32px;
-    background-color: var(--pink);
-    padding: 20px 24px;
 }
 
 .org-dis-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
 }
 
 .org-dis-list li {
-    width: 33.3%;
     list-style: none;
     height: 164px;
-    padding: 10px 8px;
+    padding: 16px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .org-dis-list {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 16px;
+        gap: 16px;
+    }
     .time-block__list ul li {
         padding: 0 70px;
     }
