--- a/src/features/MerchantComment/merchantComment.css
+++ b/src/features/MerchantComment/merchantComment.css
@@ -7,6 +7,8 @@
 }
 .merchantComment .sign-form__box input {
   padding: 8px 24px 8px 24px;
+  position: relative;
+  width: calc(100% - 64px);
 }
 .merchantComment-left {
   width: 33.33%;
@@ -17,9 +19,23 @@
   height: 100%;
 }
 .merchantComment-img{
+  position: absolute;
+  right: 0;
+  margin-right: 66px;
   cursor: pointer;
-  margin-left: 16px;
   padding: 0px 12px;
+}
+.submit-merchantComment{
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background-color: var(--purple);
+  padding: 4px 8px;
+  border-radius: 6px;
+}
+.submit-merchantComment img{
+  width: 20px;
+  height: 20px;
 }
 .merchantComment-right 
 .merchantComment-left__vote {
@@ -169,7 +185,7 @@
 }
 .comment-evalutes__img{
   margin-top: 8px;
-  height: 200px;
+  height: 142px;
   border-radius: 6px;
   cursor: pointer;
 }
