--- a/src/features/ComboDetail/style.css
+++ b/src/features/ComboDetail/style.css
@@ -18,74 +18,80 @@
     filter: drop-shadow(0 6px 15px #dcd8ee);
     border-radius: 24px;
 }
-.combo-name{
+.combo-name {
     font-size: 26px;
     line-height: 36px;
     color: var(--purple);
     white-space: pre-line;
     font-weight: 700;
 }
-.combo-detail__list-item .title{
+.combo-detail__list-item .list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 16px;
+}
+.combo-detail__list-item .title {
     font-size: 18px;
     line-height: 22px;
     font-weight: 700;
     color: var(--purple);
 }
-.combo-detail__list-item .item{
+.combo-detail__list-item .item {
     padding: 8px;
-    margin: 3px 0px;
 }
-.combo-detail__list-item .item-combo__cnt{
+.combo-detail__list-item {
+    padding: 24px 0 0 0;
+}
+.combo-detail__list-item .item-combo__cnt {
     background-color: var(--bgWhite);
     display: flex;
-    justify-content: space-between;
-    padding: 12px;
+    flex-direction: column;
+    padding: 16px;
     border-radius: 8px;
     box-shadow: 0px 6px 15px #dcd8ee;
+    display: flex;
+    flex-direction: column;
 }
-.combo-detail__list-item .item-combo__img{
-    width: 112px;
-    height: 112px;
+.combo-detail__list-item .item-combo__img {
+    width: 270px;
+    height: 100%;
     object-fit: cover;
     border-radius: 8px;
 }
-.combo-detail__list-item .item-combo__detail{
-    width: calc(100% - 112px);
-    padding-left: 12px;
-}
-.combo-detail__list-item .item-combo__detail .name{
+
+.combo-detail__list-item .item-combo__detail .name {
     font-size: 16px;
     line-height: 20px;
     font-weight: 700;
     color: var(--text-black);
 }
-.combo-cnt__right-head{
+.combo-cnt__right-head {
     display: flex;
     flex-direction: column;
     padding: 0px 0px 12px;
     border-bottom: solid 1px var(--purple);
 }
-.right-combo__name{
+.right-combo__name {
     font-size: 26px;
     line-height: 36px;
     font-weight: 700;
     color: var(--text-black);
 }
-.right-combo__org-name{
+.right-combo__org-name {
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
     color: var(--purple);
     margin: 4px 0;
 }
-.right-combo__old-price{
+.right-combo__old-price {
     font-size: 16px;
     line-height: 20px;
     font-weight: 700;
     color: var(--black);
     text-decoration: line-through;
 }
-.right-combo__sale-percent{
+.right-combo__sale-percent {
     margin-top: 6px;
     font-size: 14px;
     line-height: 18px;
@@ -96,9 +102,71 @@
     border-radius: 8px;
     margin-right: 12px;
 }
-.right-combo__sale-price{
+.right-combo__sale-price {
     font-size: 20px;
     line-height: 24px;
     font-weight: 700;
     color: var(--red-cl);
+}
+.item-combo__detail {
+    height: 48px;
+}
+.item-combo__detail span {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    text-transform: capitalize;
+}
+@media only screen and (max-width: 1023px) {
+    .combo-cnt {
+        padding: 24px;
+        gap: 0 24px;
+    }
+    .combo-cnt .combo-cnt__left {
+        width: 50%;
+        padding: 0;
+    }
+    .combo-cnt .combo-cnt__right {
+        width: 50%;
+    }
+    .combo-detail__list-item .list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 16px;
+    }
+}
+@media only screen and (max-width: 767px) {
+    .combo-cnt {
+        padding: 0;
+    }
+    .combo-cnt .combo-cnt__left {
+        width: 100%;
+        padding: 0;
+    }
+    .combo-detail__list-item {
+        padding-top: 16px;
+    }
+    .combo-detail__list-item ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding-top: 16px;
+        gap: 16px;
+    }
+    .combo-detail__list-item li .item-combo__cnt {
+        display: flex;
+        flex-direction: column;
+        gap: 4px 0;
+        padding: 16px;
+    }
+    .combo-detail__list-item .item-combo__detail {
+        width: 100%;
+        padding: 0;
+    }
+    .combo-detail__list-item .item {
+        margin: 0;
+        padding: 0;
+    }
 }
