--- a/src/features/SaleByMerchant/sale.css
+++ b/src/features/SaleByMerchant/sale.css
@@ -17,7 +17,7 @@
     line-height: 20px;
     font-weight: 700;
     border-radius: 16px;
-    transition: all .3s;
+    transition: all 0.3s;
 }
 
 .sale-content__right {
@@ -29,41 +29,201 @@
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
-    width: 100%
+    width: 100%;
 }
 .sale-list__item {
     width: 20%;
     background-color: var(--bgWhite);
     padding: 12px 8px;
 }
-.sale-list-cnt__pagination{
+.sale-list-cnt__pagination {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-/* Mobile */
-@media only screen and (max-width: 769px) {
-    .sale-content{
-        padding: 24px 8px 48px 8px;
+.product .MuiTabs-scroller {
+    overflow-x: scroll !important;
+}
+
+.dealhot-service__detail .suggest-card__list-name,
+.dealhot-service__detail .suggest-card__list-quantity {
+    width: 50%;
+    justify-content: flex-end;
+    gap: 0 8px;
+}
+.dealhot-service__detail .suggest-card__list-quantity {
+    display: flex;
+    flex-direction: column-reverse !important;
+    gap: 8px 0;
+    align-items: flex-end;
+}
+.dealhot-service__detail .suggest-card__list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px 0;
+}
+.dealhot-service__detail .suggest-card__list-name {
+    font-size: 16px !important;
+    line-height: 1.5 !important;
+}
+.dealhot-service__detail .suggest-cnt__list-tem__top {
+    align-items: flex-start !important;
+    gap: 0 16px;
+}
+
+/* tablet */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .dealhot-service__detail .product .mer__content-info__util-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 24px;
+        gap: 24px;
+    }
+
+    .dealhot-service__detail .product-cnt__left-img {
+        height: 300px;
+    }
+    .dealhot-service__detail .pr-de-mer__content-info {
+        gap: 4px 0;
+    }
+    .dealhot-service__detail .pr-de-mer .pr-de-mer__content {
+        gap: 0 24px;
+    }
+    .sale-content {
+        padding: 0;
+    }
+    .product .product-cnt__left {
+        padding-right: 0;
+    }
+    .dealhot-service__detail .product .product-cnt {
+        flex-direction: row;
+    }
+    .dealhot-service__detail .product-cnt .product-cnt__right {
+        border-radius: 24px;
+        padding: 24px;
+    }
+    .dealhot-service__detail .suggest-cnt__list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 4px 16px;
+    }
+    .dealhot-service__detail .suggest-cnt__list li {
+        display: flex;
+        height: 100%;
+        flex: 1;
+    }
+    .dealhot-service__detail .suggest-card__list-quantity {
         display: flex;
         flex-direction: column;
     }
-    .sale-content__left{
+    .dealhot-service__detail .suggest-card__list-name {
+        width: 50%;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+        font-size: 16px !important;
+        line-height: 1.3 !important;
+    }
+    .dealhot-service__detail .suggest-card__list {
+        display: flex;
+        flex-direction: column;
+        gap: 8px 0;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem {
+        flex-direction: column;
+        gap: 8px 0;
+        position: relative;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__detail {
+        width: 100%;
+        padding: 0;
+        position: relative;
+        flex: 1;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__top {
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 16px 0;
+        flex: 1;
+        height: 100%;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__top span {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__top span:nth-child(2) {
+        margin-top: auto;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__img {
+        height: 182px;
+        width: 182px;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__bot {
+        position: absolute;
+        top: -40px;
+        left: 8px;
+    }
+    .dealhot-service__detail .suggest-cnt__list-tem__btn {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+    }
+    .dealhot-service__detail .suggest-card__list-quantity {
+        width: 50%;
+        align-items: flex-end;
+        gap: 4px 0;
+    }
+    .dealhot-service__detail .suggest-card__list li:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 8px;
+    }
+    .dealhot-service__detail .pr-de-mer__content {
+        align-items: flex-start;
+    }
+    .dealhot-service__detail .detail-btn {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .dealhot-service__detail .detail-btn button {
+        width: unset;
+    }
+    .dealhot-service__detail .section-title {
+        font-size: 20px;
+    }
+}
+/* Mobile */
+@media only screen and (max-width: 767px) {
+    .sale-content {
+        display: flex;
+        flex-direction: column;
+        padding-top: 0;
+    }
+    .sale-content__left {
         width: 100%;
     }
-    .sale-content__left ul{
+    .sale-content__left ul {
         display: flex;
         justify-content: space-between;
         width: 100%;
     }
-    .sale-content__left ul li{
+    .sale-content__left ul li {
         width: 49.5%;
     }
-    .sale-content__right{
+    .sale-content__right {
         width: 100%;
         padding: 0;
     }
-    .sale-list__item{
+    .sale-list__item {
         width: 50%;
     }
 }
