--- a/src/features/SectionTitle/sectionTitle.css
+++ b/src/features/SectionTitle/sectionTitle.css
@@ -10,9 +10,15 @@
 @media only screen and (max-width: 767px) {
     .section-title {
         padding: 0px;
-        font-size: 18px;
+        font-size: 20px;
         line-height: 32px;
-        padding: 0 16px;
+        padding: 0;
         text-align: center !important;
+    }
+    .mer-sale-list__title {
+        font-size: 18px;
+    }
+    .mer-sale-list {
+        margin-bottom: 16px;
     }
 }
