--- a/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
+++ b/src/features/ViewItemCommon/ServicePromoItem/service-promo-item.css
@@ -4,6 +4,7 @@
     background-color: var(--bgWhite);
     border-radius: 8px;
     transition: all 0.4s;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     border: 1px solid transparent;
