--- a/src/features/MerchantDetail/merchantDetail.css
+++ b/src/features/MerchantDetail/merchantDetail.css
@@ -912,6 +912,10 @@
     .mer-detail__cnt {
         padding: 20px 16px 16px 16px;
     }
+    .mer-detail__content-cmt {
+        padding: 0;
+        box-shadow: none;
+    }
 }
 /* Mobile */
 @media only screen and (max-width: 767px) {
